--- a/handmade-hero.org
+++ b/handmade-hero.org
@@ -312,3 +312,25 @@ Mainly used to review the week + clean up code.
   variable won't be mutated
 
 * Day 006 - Gamepad and Keyboard Input
+** [[https://docs.microsoft.com/en-us/windows/win32/xinput/getting-started-with-xinput][XInput]]
+There's three methods to get the input:
+- Interrupt :: device tells system when it changed (kinda old school)
+- Polling :: system asks the device for it's state (most common)
+- Streaming :: device continuously tells it's state to the system (so kinda like an interrupt), but
+  it acts more as a "network" where you send packets
+
+[[https://docs.microsoft.com/en-us/windows/win32/api/xinput/nf-xinput-xinputgetstate][XInputGetState]] returns this state of the controller, while [[https://docs.microsoft.com/en-us/windows/win32/api/xinput/nf-xinput-xinputsetstate][XInputSetState]] makes it possible to set
+the vibration on a compatible controller. The API is small and good.
+
+We don't want the game to crash when the user doesn't have XInput installed, especially since the
+user might not even intend to play the game with a controller. We can do what Windows does behind
+the scenes to have more control over it.
+Load the ~xinput1_4.dll~ via [[https://docs.microsoft.com/en-us/windows/win32/api/libloaderapi/nf-libloaderapi-loadlibrarya][LoadLibrary]] and retrieve the address to the function we want to use from
+that library by calling [[https://docs.microsoft.com/en-us/windows/win32/api/libloaderapi/nf-libloaderapi-getprocaddress][GetProcAddress]]. (essentially this is exactly what Windows anyways).
+
+** Keyboard
+The WPARAM from the WindowCallback holds the pressed (or released) key when the message is either
+~WM_SYSKEYUP~, ~WM_KEYUP~, ~WM_SYSKEYDOWN~ or ~WM_KEYUP~.
+
+The LPARAM holds additional information regarding the pressed (or released key). See each event for
+the details.
