--- a/README.org
+++ b/README.org
@@ -1,23 +1,7 @@
-#+TITLE: Educational notes dump
+#+TITLE: Braindump
 #+AUTHOR: venikx
 #+STARTUP: content, indent
 
 * What is this madness?
 A massive personal, educational notes dump when studying several topics,
 using different media forms: books, blog posts, videos, code snippets, ...
-
-* Index
-** [[file:algorithms.org][Algorithms]]
-** [[file:c.org][C]]
-** [[file:cooking-recipes.org][Cooking Recipes]]
-** [[file:cryptography.org][Cryptography]]
-** [[file:game-mastering.org][Game Mastering]]
-** [[file:handmade-hero.org][Handmade Hero]]
-** [[file:javascript.org][Javascript]]
-** [[file:linux.org][Linux]]
-** [[file:productivity.org][Productivity]]
-** [[file:python.org][Python]]
-** [[file:software-development.org][Software Development]]
-** [[file:tattoos.org][Tattoos]]
-** [[file:web-design.org][HTML, CSS and Design]]
-** [[file:web-development.org][Web Development]]
