--- a/index.org
+++ b/index.org
@@ -1,3 +1,8 @@
 #+TITLE: Index
+#+AUTHOR: venikx
 #+CREATED: [2020-07-09 Thu 14:52]
 #+MODIFIED: [2020-07-09 Thu 14:53]
+
+* What is this madness?
+A massive personal, educational notes dump when studying several topics,
+using different media forms: books, blog posts, videos, code snippets, ...
