--- a/journal/2020/200802.org
+++ b/journal/2020/200802.org
@@ -4,3 +4,4 @@
 
 * Deleted most of my older notes
 * Added [[file:../../20200801233905-zettelkasten.org][Zettelkasten]] as the first ever permanent note
+* Started reading Chapter 1 of [[file:../../references/20200802190131-the-c-programming-language.org][The C Programming Language]]
