Add a Reason metadata to the books
I want to fill in the reason of a book that I plan to read, because
sometimes it takes a while before I can actually start reading it. If
the book doesn't make sense at a certain point in time, then I can pause
reading it for even longer or throw away if I don't deem it valuable anymore.

--- a/journal/2020/200701.org
+++ b/journal/2020/200701.org
@@ -4,3 +4,4 @@
 
 * Completed [[file:../../references/20200802173245-how-to-take-smart-notes.org][How to take Smart Notes]]
 * Started reading [[file:../../references/20200802190944-code-the-hidden-languages-of-computer-hardware-and-software.org][Code: The Hidden Languages of Computer Hardware and Software]]
+* Bought [[file:../../references/20200802191512-computer-systems-a-programmer-s-perspective.org][Computer Systems: A Programmer's Perspective]]
