--- a/references/20200802173245-how-to-take-smart-notes.org
+++ b/references/20200802173245-how-to-take-smart-notes.org
@@ -6,6 +6,7 @@
 * Metadata
 ** Author: Sönke Ahrens
 ** Link: https://www.goodreads.com/book/show/34507927-how-to-take-smart-notes
+** Reason: Recommended by a colleague when I talked about being more "active" when reading books
 * Ideas
 ** The quality of written content depends on the amount of writing you have done beforehand.
 ** Not needing to use willpower sets you up for success. That's why defining tasks works so well.
